--- a/output/team.html
+++ b/output/team.html
@@ -32,7 +32,7 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:jared@email.com">jared@email.com</a></li>
-            <li class="list-group-item">Office number: 1</li>
+            <li class="list-group-item">Office number: 111-111-1111</li>
         </ul>
     </div>
 </div>
@@ -44,7 +44,7 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:jared@email.com">jared@email.com</a></li>
+            <li class="list-group-item">Email: <a href="mailto:alec@email.com">alec@email.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/balec" target="_blank" rel="noopener noreferrer">balec</a></li>
         </ul>
     </div>
